--- a/TicketsControl/tickets/templates/administracion/estadosagente.html
+++ b/TicketsControl/tickets/templates/administracion/estadosagente.html
@@ -14,7 +14,7 @@
         width: 100%;
     }
     .imgFondo{
-        background: url('{% static "img/Fondo7.jpg" %}') no-repeat;
+        background: url('{% static "img/iStock2.jpg" %}') no-repeat;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
