--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -28,18 +28,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3" style="display: none;">
+                        <div class="col-md-6 mb-3">
                             <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2" disabled
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2" hidden
                                     type="button" id="loading-indicator" onclick="crear_ticket_cajas()"><p style="font-size: 30px;" class="mt-3 mb-3">Cajas</p></button>
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2"
+                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retencion()"><p style="font-size: 30px;" class="mt-3 mb-3">Retenciones</p></button>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 mb-3">
-                            <div class="form-floating d-flex justify-content-center">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-floating">
                                 <div>
-                                    <button class="btnStyle btn btn-lg fw-bold pt-2 pb-2" type="button" id="loading-indicator" style="width: 360px;" onclick="crear_ticket_cursolibre()">
+                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-2 pb-2" type="button" id="loading-indicator" style="width: 360px;" onclick="crear_ticket_cursolibre()">
                                         <p style="font-size: 30px;" class="mt-3 mb-3">Cursos Libres</p></button>
                                 </div>
                             </div>
