--- a/TicketsControl/tickets/templates/agentes/inicio_atencion_registro.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion_registro.html
@@ -115,7 +115,7 @@
                         <label class="form-check-label" for="inlineCheckbox2">Suficiencia</label>
                     </div>
                     <div class="col form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Convalidación">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Convalidacion">
                         <label class="form-check-label" for="inlineCheckbox3">Convalidación</label>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                         <label class="form-check-label" for="inlineCheckbox4">Congelamientos</label>
                     </div>
                     <div class="col form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="Graducaciones">
-                        <label class="form-check-label" for="inlineCheckbox5">Graducaciones</label>
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="Graduaciones">
+                        <label class="form-check-label" for="inlineCheckbox5">Graduaciones</label>
                     </div>
                     <div class="col form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="Seminario">
@@ -149,8 +149,8 @@
                 </div>
                 <div class="row">
                     <div class="col form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="Graducaciones">
-                        <label class="form-check-label" for="inlineCheckbox10">Graducaciones</label>
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="Tesis">
+                        <label class="form-check-label" for="inlineCheckbox10">Tesis</label>
                     </div>
                     <div class="col form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="Actas">
