--- a/TicketsControl/tickets/templates/agentes/inicio_atencion.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion.html
@@ -24,24 +24,13 @@
                                 </select>
                             </div>
                         </div>
-                        {% if 'Registro' in cola %}
+                        {% if departamento.tramitesDepartamento %}
                         <div class="mt-2">
                             <div class="" style="align-items: center;">
                                 <h5 class="fw-light fw-bold">Cola:&nbsp;&nbsp;</h5>
-                                <select style="width: 135px; height: 35px;"
-                                    class="roundedInput form-select form-select-sm" aria-label=".form-select-sm example"
-                                    id="cola_select" name="cola_select" onchange="cola()">
-                                    <option value="{{ cola }}" selected>{{ cola }}</option>
-                                    <option value="Registro/Documentos">Registro/Documentos</option>
-                                    <option value="Registro/Tesis">Registro/Tesis</option>
-                                    <option value="Registro/Convalidacion">Registro/Convalidacion</option>
-                                    <option value="Registro/Retiros">Registro/Retiro-Congelar</option>
-                                    <option value="Registro/Suficiencia">Registro/Suficiencias</option>
-                                    <option value="Registro/Graduaciones">Registro/Graduaciones</option>
-                                    <option value="Registro/Taller">Registro/Taller</option>
-                                    <option value="Registro/Apelaciones">Registro/Apelaciones</option>
-                                    <option value="Registro/Retenciones">Registro/Retenciones</option>
-                                </select>
+                                <button class="btnStyle btn btn-md btn-login  mb-2 d-flex" type="button"
+                                    id="btnAsignar" data-bs-toggle="modal"
+                                    data-bs-target="#modal_colas">Asignar</button>
                             </div>
                         </div>
                         {% endif %}
@@ -59,38 +48,32 @@
                     <div class="col-12 col-sm-12 col-md-8 col-lg-6">
                         <div class="d-flex justify-content-center flex-wrap mx-auto ">
                             <div class="col-md-6 justify-content-center">
-                                <button class="btnStyle1 btn btn-md btn-login fw-bold mb-2 d-flex" type="button"
+                                <button class="btnStyle btn btn-md btn-login mb-2 d-flex" type="button"
                                     id="btnSiguiente" onclick="numeroSiguiente()">Siguiente</button>
                             </div>
 
-                            <button id="btnTransferir" type="button" class="fw-bold btnStyle2 btn btn-md dropdown-toggle mb-2"
+                            <button id="btnTransferir" type="button" class="btnStyle btn btn-md dropdown-toggle mb-2"
                                 data-bs-toggle="dropdown" aria-expanded="false">Transferir</button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Admisiones')">Admisiones</a></li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro')">Registro</a></li>
-                                <li><a class="dropdown-item disabled" style="cursor: pointer;"
-                                        onclick="transferencia('Cajas')">Cajas</a></li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Cursos Libres')">Cursos Libres</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro/Tesis')">Registro/Tesis</a></li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro/Convalidacion')">Registro/Convalidacion</a>
-                                </li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro/Retiros')">Registro/Retiros-Congelacion</a>
-                                </li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro/Suficiencia')">Registro/Suficiencia</a>
-                                </li>
-                                <li><a class="dropdown-item" style="cursor: pointer;"
-                                        onclick="transferencia('Registro/Graduaciones')">Registro/Graduaciones</a>
-                                </li>
+                                {% for depart in tranferDepartamentos %}
+                                    {% if depart.tramitesDepartamento %}
+                                        <hr class="dropdown-divider">
+                                        <li><a class="dropdown-item" style="cursor: pointer;">{{ depart.nombre }} &raquo; </a>
+                                            <ul class="dropdown-menu dropdown-submenu">
+                                        {% for tranfer in tranferTramites %}
+                                            {% if tranfer.departamento ==  depart %}
+                                                <li><a class="dropdown-item" style="cursor: pointer;"
+                                                onclick="transferencia('{{ depart.nombre }}/{{ tranfer.nombre }}')">{{ tranfer.nombre }}</a></li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        </ul>
+                                        </li>
+                                        <hr class="dropdown-divider">
+                                    {% else %}
+                                        <li><a class="dropdown-item" style="cursor: pointer;"
+                                        onclick="transferencia('{{ depart.nombre }}')">{{ depart.nombre }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -107,7 +90,58 @@
         </div>
     </div>
 </div>
+{% block modal_colas%}
+<div class="modal fade" id="modal_colas" tabindex="-1" aria-labelledby="modal_colasTitle" style="display: none"
+    aria-hidden="true" >
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title titulo" id="exampleModalCenterTitle">Colas de Atencion</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="checkboxContainer"  class="modal-body">
+                <div class="row">
+                    {% for tramite in tramites %}
+                    <div class="col form-check form-check-inline">
+                        <input class="form-check-input" id="input_{{ forloop.counter }}" type="checkbox" value="{{ tramite.nombre }}">
+                        <label class="form-check-label" for="input_{{ forloop.counter }}">{{ tramite.nombre }}</label>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" onclick="cola()" data-bs-dismiss="modal" class="btnStyle btn">Guardar Cambios</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock modal_colas %}
+
 <style>
+    .dropdown-menu li {
+        position: relative;
+    }
+    
+    .dropdown-menu .dropdown-submenu {
+        display: none;
+        position: absolute;
+        left: 100%;
+        top: -7px;
+    }
+
+    .dropdown-menu .dropdown-submenu-left {
+        right: 100%;
+        left: auto;
+    }
+
+    .dropdown-menu > li:hover > .dropdown-submenu {
+        display: block;
+    }
+
+    #checkboxContainer{
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
     .roundedInput {
         border-radius: 40px;
         text-align: justify;
@@ -115,36 +149,26 @@
         font-family: 'Abrade';
         font-weight: 600;
     }
-    .btnStyle1{
+    .btnStyle {
         background-color: #000000;
-        color: #ffd142;
+        color: #ffffff;
         border-radius: 50px;
         border-color: #000000;
         font-size: 15px;
     }
-    .btnStyle2{
-        background-color: #000000;
-        color: #ffd142;
-        border-radius: 50px;
-        border-color: #000000;
-        font-size: 15px;
-    }
-    .btnStyle3{
+
+    .btnStyle3 {
         background-color: #960000;
         color: white;
         border-radius: 50px;
         border-color: #960000;
         font-size: 15px;
     }
-    .btnStyle1:hover {
-        background-color: #ffd142;
-        color: #000000;
-        border-color: #ffd142;
-    }
-    .btnStyle2:hover {
-        background-color: #ffd142;
-        color: #000000;
-        border-color: #ffd142;
+
+    .btnStyle:hover {
+        background-color: #000000;
+        color: #ffd142;
+        border-color: #000000;
     }
 </style>
 <script>
@@ -153,9 +177,16 @@
     };
 
     function cola() {
-        var cola = document.getElementById("cola_select").value;
+        var checkboxContainer = document.getElementById("checkboxContainer");
+        var checkboxes = checkboxContainer.querySelectorAll('input[type="checkbox"]');
+        var cola = "Departamento";
+        checkboxes.forEach(function(checkbox) {
+            if (checkbox.checked) {
+                cola = cola.concat(",",checkbox.value)
+            }
+        });
+
         var agente = document.getElementById("id_agente").textContent;
-        console.log(agente)
         var url = "/cambiar-cola/?agente=";
         var request = new XMLHttpRequest();
         request.open('GET', url + encodeURIComponent(agente) + "&cola=" + encodeURIComponent(cola), true);
@@ -192,7 +223,7 @@
         var boton2 = document.getElementById("btnTransferir");
         var boton3 = document.getElementById("btnSalir");
         var numero = document.getElementById("txtNumero");
-        var cola = document.getElementById("cola_select");
+        var cola = document.getElementById("btnAsignar");
 
         if (estadoactual == 'Activo' || estadoactual == 'Inactivo') {
             boton.disabled = true;
@@ -269,20 +300,6 @@
         };
         request.send();
     }
-
-    const colaSelect = document.getElementById('cola_select');
-
-    function fetchCola() {
-    fetch(window.location.href, { headers: { 'X-Requested-With': 'XMLHttpRequest' } })
-        .then(response => response.text())
-        .then(data => {
-        const parser = new DOMParser();
-        const newSelect = parser.parseFromString(data, 'text/html').getElementById('cola_select');
-        colaSelect.innerHTML = newSelect.innerHTML;
-        });
-    }
-
-    setInterval(fetchCola, 10000);
 
     function initializeWebChannel() {
         if (typeof QWebChannel !== 'undefined') {
