--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -62,7 +62,7 @@
 {% block modal_registro%}
 <div class="modal fade" id="modal_registro" tabindex="-1" aria-labelledby="modal_registroTitle" style="display: none"
     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered custom-modal-xl" role="document">
+    <div class="modal-dialog modal-dialog-centered custom-modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-body">
                 <main class="form-signin">
@@ -73,84 +73,31 @@
                             <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccioná el trámite que deseas realizar.</p>
                         </div>
                     </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro()"><p style="font-size: 30px;" class="mt-3 mb-3">Documentos</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button type="submit"
-                                        class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                        type="button" id="loading-indicator" onclick="crear_ticket_registro_tesis()"><p style="font-size: 30px;" class="mt-3 mb-3">Tesis</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-1 pb-1"
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retiros()"><p style="font-size: 27px; margin-top: 30px; margin-bottom: 30px;">Retiros y Congelamientos</p></button>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row mb-3" style="align-items: center; justify-content: center;">
+                        <select id="tramitesSelect" class="form-select form-select-lg mb-3 mt-3 roundedInput" aria-label=".form-select-lg example" onchange="botonGenerar()">
+                            <option selected disabled>Trámites</option>
+                            <option value="Documentos">Documentos</option>
+                            <option value="Suficiencia">Suficiencia</option>
+                            <option value="Convalidacion">Convalidación</option>
+                            <option value="Congelamientos">Congelamientos</option>
+                            <option value="Graduaciones">Graduaciones</option>
+                            <option value="Seminario">Seminario de Graduación</option>
+                            <option value="Taller">Taller</option>
+                            <option value="Cartas">Solicitudes Cartas</option>
+                            <option value="Adecuaciones">Adecuaciones</option>
+                            <option value="Actas">Actas</option>
+                            <option value="TCU">TCU</option>
+                            <option value="CursosLibres">Cursos Libres</option>
+                            <option value="Examenes">Exámenes</option>
+                            <option value="Matricula">Matrícula</option>
+
+                            <option value="Retenciones">Retenciones</option>
+                            <option value="Tesis">Tesis</option>
+                        </select>
                     </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_suficiencia()"><p style="font-size: 30px;" class="mt-3 mb-3">Suficiencas</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_convalidacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Convalidaciones</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_graduacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Graduaciones</p></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_taller()"><p style="font-size: 30px;" class="mt-3 mb-3">Taller</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_apelacion()"><p style="font-size: 30px;" class="mt-3 mb-3">Apelaciones</p></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-floating">
-                                <div>
-                                    <button class="btnStyle w-100 btn btn-lg fw-bold pt-3 pb-3 "
-                                    type="button" id="loading-indicator" onclick="crear_ticket_registro_retencion()"><p style="font-size: 30px;" class="mt-3 mb-3">Retenciones</p></button>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row mb-3" style="align-items: center; justify-content: center;">
+                        <button class="btnStyle2 btn btn-lg fw-bold pt-1 pb-1 mb-5 mt-1" disabled
+                        type="button" id="btnGenerar" onclick="GenerarTicket()"><p style="font-size: 30px;" class="mt-3 mb-3">Generar Ticket</p></button>
                     </div>
                     <div class="row mt-2" style="justify-content: center;">
                         <img src="{% static 'img/uia_logo.png' %}" alt="" style="width: 170px; height: 85px;">
@@ -163,8 +110,8 @@
 {% endblock modal_registro %}
 
 <style>
-    .modal-dialog.custom-modal-xl {
-        max-width: 95%; /* Puedes ajustar el porcentaje según tus necesidades */
+    .modal-dialog.custom-modal-lg {
+        max-width: 60%; /* Puedes ajustar el porcentaje según tus necesidades */
     }
 
     .titulo{
@@ -196,7 +143,7 @@
         border-color: #000000;
         font-size: 15px;
     }
-    .btnStyle:hover {
+    .btnStyle:hover, .btnStyle2:hover {
         background-color: #000000;
         color: #ffd142;
         border-color: #000000;
@@ -207,6 +154,35 @@
     .navbar-brand:active {
         outline: none !important;
         box-shadow: none !important;
+    }
+
+    .btnStyle2 {
+        background-color: #000000;
+        color: white;
+        border-radius: 30px;
+        border-color: #000000;
+        font-size: 15px;
+        width: 50%;
+    }
+
+    .roundedInput {
+        border-radius: 50px;
+        text-align: justify;
+        font-size: 30px;
+        padding: 10px;
+        padding-left: 30px;
+        font-family: 'Abrade';
+        font-weight: 600;
+        width: 70%;
+    }
+
+    .roundedInput:focus{
+        outline: 1px solid #ffd142;
+        border-color: #ffd142;
+        box-shadow: 0 0 1px #ffd142;
+    }
+    .roundedInput option{
+        background-color: rgba(255, 226, 147);
     }
     
 </style>
@@ -220,9 +196,55 @@
           setTimeout(function() {
             $('#modal_registro').modal('hide');
             registro.style.color = "white";
-          }, 15000);
+          }, 20000);
         });
     });
+
+    function botonGenerar(){
+        var btnGenerar = document.getElementById("btnGenerar");
+        btnGenerar.disabled = false
+    }
+
+    function GenerarTicket(){
+        const select = document.getElementById('tramitesSelect');
+        var opcion = select.value;
+
+        if (opcion === "Documentos"){
+            crear_ticket_registro();
+        }else if (opcion === "Suficiencia"){
+            crear_ticket_registro_suficiencia();
+        }else if (opcion === "Convalidacion"){
+            crear_ticket_registro_convalidacion();
+        }else if (opcion === "Congelamientos"){
+            crear_ticket_registro_congelamiento();
+        }else if (opcion === "Graduaciones"){
+            crear_ticket_registro_graduacion();
+        }else if (opcion === "Seminario"){
+            crear_ticket_registro_semirario();
+        }else if (opcion === "Taller"){
+            crear_ticket_registro_taller();
+        }else if (opcion === "Cartas"){
+            crear_ticket_registro_cartas();
+        }else if (opcion === "Adecuaciones"){
+            crear_ticket_registro_adecuaciones();
+        }else if (opcion === "Actas"){
+            crear_ticket_registro_actas();
+        }else if (opcion === "TCU"){
+            crear_ticket_registro_tcu();
+        }else if (opcion === "CursosLibres"){
+            crear_ticket_registro_curso();
+        }else if (opcion === "Examenes"){
+            crear_ticket_registro_examenes();
+        }else if (opcion === "Matricula"){
+            crear_ticket_registro_matricula();
+        }else if (opcion === "Tesis"){
+            crear_ticket_registro_tesis();
+        }
+
+        select.selectedIndex = 0;
+        $('#modal_registro').modal('hide');
+        btnGenerar.disabled = true
+    }
 
     function crear_ticket_admision() {
         var url = "/crear-ticket-admision/";
@@ -302,8 +324,8 @@
         request.send();
     }
     
-    function crear_ticket_registro_retiros() {
-        var url = "/crear-ticket-registro-retiros/";
+    function crear_ticket_registro_congelamiento() {
+        var url = "/crear-ticket-registro-congelamiento/";
         var request = new XMLHttpRequest();
         request.open('GET', url, true);
         request.onload = function () {
@@ -369,6 +391,110 @@
 
     function crear_ticket_registro_retencion() {
         var url = "/crear-ticket-registro-retencion/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_semirario() {
+        var url = "/crear-ticket-registro-seminario/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+    
+    function crear_ticket_registro_cartas() {
+        var url = "/crear-ticket-registro-cartas/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_adecuaciones() {
+        var url = "/crear-ticket-registro-adecuaciones/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_actas() {
+        var url = "/crear-ticket-registro-actas/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_tcu() {
+        var url = "/crear-ticket-registro-tcu/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_curso() {
+        var url = "/crear-ticket-registro-curso/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+
+    function crear_ticket_registro_examenes() {
+        var url = "/crear-ticket-registro-examenes/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                location.reload();
+            }
+        };
+        request.send();
+    }
+    
+    function crear_ticket_registro_matricula() {
+        var url = "/crear-ticket-registro-matricula/";
         var request = new XMLHttpRequest();
         request.open('GET', url, true);
         request.onload = function () {
